--- a/example.ipynb
+++ b/example.ipynb
@@ -2,45 +2,118 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "143cc52f",
+   "execution_count": 2,
+   "id": "955db051",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "5+5\n"
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05bd133b",
+   "metadata": {},
+   "source": [
+    "### Logit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "de5928a7",
+   "execution_count": 13,
+   "id": "143cc52f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Взвешенная сумма до смещения: 1.5\n",
+      "Итоговый выход нейрона (z): 0.699999988079071\n"
+     ]
     }
    ],
    "source": [
-    "6*5"
+    "\n",
+    "x = torch.tensor([0.0, 1.0, 1.0])\n",
+    "\n",
+    "w = torch.tensor([0.1, 0.5, 1.0])\n",
+    "\n",
+    "b = torch.tensor(-0.8)\n",
+    "\n",
+    "weighted_sum = torch.dot(w, x)\n",
+    "\n",
+    "z= weighted_sum + b\n",
+    "\n",
+    "\n",
+    "print(f\"Взвешенная сумма до смещения: {weighted_sum.item()}\")\n",
+    "print(f\"Итоговый выход нейрона (z): {z.item()}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf6b92c3",
+   "metadata": {},
+   "source": [
+    "### Activation functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de5928a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac6fef8b",
+   "metadata": {},
+   "source": [
+    "### Loss functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2c9025e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5411ad67",
+   "metadata": {},
+   "source": [
+    "### Optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e3b02c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
