--- a/example.ipynb
+++ b/example.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "143cc52f",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,6 @@
     }
    ],
    "source": [
-    "\n",
     "x = torch.tensor([0.0, 1.0, 1.0])\n",
     "\n",
     "w = torch.tensor([0.1, 0.5, 1.0])\n",
@@ -60,11 +59,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "de5928a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сырой сигнал (z): tensor([-2.5000,  0.5000,  3.0000])\n",
+      "После ReLU:       tensor([0.0000, 0.5000, 3.0000])\n",
+      "После Sigmoid:    tensor([0.0759, 0.6225, 0.9526])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "\n",
+    "z_tensor = torch.tensor([-2.5, 0.5, 3.0])\n",
+    "\n",
+    "relu_output = F.relu(z_tensor)\n",
+    "\n",
+    "sigmoid_output = torch.sigmoid(z_tensor)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(f\"Сырой сигнал (z): {z_tensor}\")\n",
+    "print(f\"После ReLU:       {relu_output}\")\n",
+    "print(f\"После Sigmoid:    {sigmoid_output}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac6fef8b",
+   "metadata": {},
+   "source": [
+    "### Loss functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2c9025e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -85,22 +129,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac6fef8b",
-   "metadata": {},
-   "source": [
-    "### Loss functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2c9025e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "5411ad67",
    "metadata": {},
    "source": [
@@ -113,7 +141,27 @@
    "id": "0e3b02c8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
